--- a/dockers/queue/Dockerfile
+++ b/dockers/queue/Dockerfile
@@ -4,15 +4,15 @@ ENV PYTHONIOENCODING=utf-8
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 
-COPY ./requirements/api.txt requirements.txt
+COPY ./requirements/queue.txt requirements.txt
 RUN pip install --upgrade pip \
     && pip install --no-cache-dir -r requirements.txt \
     && rm -rf requirements.txt
 
 RUN mkdir -p /main
-COPY ./src/api /main
+COPY ./src/stream /main
 
-COPY ./dockers/api/run_web.sh /run_web.sh
-RUN chmod a+rwx /run_web.sh && chmod -R a+rwx /main
+COPY ./dockers/queue/run_celery.sh /run_celery.sh
+RUN chmod a+rwx /run_celery.sh && chmod -R a+rwx /main
 
 WORKDIR /main
